--- a/Article/static/css/style.css
+++ b/Article/static/css/style.css
@@ -8,9 +8,10 @@
 
 /* 可以为成功和失败信息定义不同的样式 */
 .success {
-    background-color: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
+  background-color: #f0f9f4;
+  color: #0d6832;
+  border: 1px solid #a3e9bb;
+  /* 更柔和的绿色系 */
 }
 
 .error {
